--- a/exercises/module1/1.2./index.html
+++ b/exercises/module1/1.2./index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>module1</title>
+    <title>Exercice Pop up</title>
 </head>
 <body>
-    <h1>bonjour ceci est un test pour le commit </h1>
+    <script src="./index.js"></script>
+    <h1> Exercice de pop up au chargement d une page html </h1>
+    
 </body>
 </html>
