--- a/exercises/module1/1.4./index.html
+++ b/exercises/module1/1.4./index.html
@@ -10,14 +10,14 @@
 <body>
     <h1>Red light application</h1>
 
-    <div id="red">
+    <div class="circle red" id="red" color="red">
     </div>
 
-    <div id="orange">
+    <div class="circle orange" id="orange" color="orange" >
 
     </div>
 
-    <div id="green">
+    <div class="circle green" id="green" color="green" >
 
     </div>
 
