--- a/tutorials/pizzeria/hmi/classic/index.html
+++ b/tutorials/pizzeria/hmi/classic/index.html
@@ -33,7 +33,7 @@
     </main>
 
     <footer>
-      <h1 class="animate__animated animate__bounce animate__delay-2s">
+      <h1 class="animate__animated animate__zoomIn animate__delay-2s">
         But we also love JS
       </h1>
       <img src="./img/js-logo.png" alt="" />
