--- a/exercises/module1/1.3./index.html
+++ b/exercises/module1/1.3./index.html
@@ -16,6 +16,11 @@
     </div>
     <div id="message">Good Game ! </div>
 
+    <div class="container">
+      <button id="button1">touch me if you can :) </button>
+      <img src="./img/Momo.jpg" id="momo" style="visibility:hidden ;">
+    </div>
+
     <script src="./index.js"></script>
 </body>
 </html>
