myMovies : module 2 : dynamic homepage

--- a/exercises/module2/2.2/my-movie/src/index.html
+++ b/exercises/module2/2.2/my-movie/src/index.html
@@ -3,19 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your page title</title>
+    <title>My movie night</title>
     <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
     <header>
-      <h1 style="color: white;">My Movie night </h1>
+      <h1 style="color: rgb(96, 46, 46);">My Movie night</h1>
     </header>
     <main>
-      <h1 class="title" style="color: white;" >The new social network for movie lover</h1>
+      <h1 id="title" ></h1>
+      <div class="movieContainer">
+
+        <h1 style="color: rgb(25, 74, 148);" >New movies avaiable now on my movie night</h1>
+      <div id="spiderman"></div>
+      <div id="hulk"> 
+      </div>
+    </div>
     </main>
+
     <footer>
-      <h1 style="color: white;" >This website has been created by raphael malka </h1>
+      <h1 style="color: white;">This website has been created by raphael malka</h1>
     </footer>
   </body>
 </html>
